@@ -1,6 +1,6 @@
 [project]
 requires-python = ">=3.8"
-version = "2.0.0rc1"
+version = "2.0.0rc2"
 name = "astrapy"
 description = "AstraPy is a Pythonic SDK for DataStax Astra and its Data API"
 authors = [
@@ -25,7 +25,7 @@ classifiers = [
 ]
 
 [tool.poetry]
-version = "2.0.0rc1"
+version = "2.0.0rc2"
 name = "astrapy"
 description = "AstraPy is a Pythonic SDK for DataStax Astra and its Data API"
 authors = [
